<resources>
    <string name="app_name">Schedule</string>

    <string name="title_schedule">Schedule</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_settings">Settings</string>

    <string name="title_activity_new_class">Add Class</string>
    <string name="title_activity_teachers_list">Teachers</string>
    <string name="title_activity_teacher">Teacher</string>
    <string name="title_activity_edit_task">Task</string>

...
    <string name="error_long_title">Title is too long</string>
    <string name="error_subject_already_exists">This subject already exists</string>
    <string name="error_teacher_already_exists">Teacher with that name already exists.</string>
    <string name="back">Back</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >3 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_username">Username</string>
</resources>

